# marimo-talk

./: notebook.py  pyproject.toml  talk.py
assets/: convert_gif_to_webm.sh
notebooks/: cache_bug.py  choices.json  embedding.html  embedding_mnist.py  foo.py  haikus.py  interactive.py  reactive_notebook.py
public/: delete.webm  reactive-2.webm  reactive.webm
